fix: responsiveness error due to hero section having fixed width instead of max-width on mobile breakpoint.

--- a/styles.css
+++ b/styles.css
@@ -256,13 +256,13 @@ img {
 
 @media (max-width: 830px) {
   .hero-prompt {
-    width: 450px;
+    max-width: 450px;
   }
 }
 
 @media (max-width: 425px) {
   .hero-prompt--headline {
-    width: 300px;
+    max-width: 300px;
     margin: 0 auto 40px;
   }
 
